--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,9 @@
 <html>
   <head>
     <title>Koren the Shortener of URLS</title>
-    <script src="jquery-3.2.1.min.js"></script>
   </head>
   <body>
-    <h1>Koren the Shortener of URLS</h1>
-    <button id="shortenUp">Get Short URL</button>
+    <link rel="stylesheet" href="styles.css" />
     <script src="popup.js"></script>
   </body>
 </html>
-;
